# ubuntu18-drone

./: README.md  requirements.txt  train_cfg.yml
autodrone-openvino/: CMakeLists.txt  README.md  main.cpp  nanodet_openvino.cpp  outcpp.avi
